--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,16 @@ dependencies:
   flutter_svg: ^2.0.4
   cached_network_image: ^3.2.3
   wiredash: ^1.6.0
+  youtube_player_flutter: ^8.1.2
+  hive: ^2.2.3
+  path_provider: ^2.0.14
   flutter_localizations:
     sdk: flutter
 
 
 dev_dependencies:
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
   flutter_test:
     sdk: flutter
   lints: ^2.0.1
