--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   youtube_player_flutter: ^8.1.2
   hive: ^2.2.3
   path_provider: ^2.0.14
+  lints: ^2.0.1
   flutter_localizations:
     sdk: flutter
 
