--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.0.14
   lints: ^2.0.1
+  flare_flutter: ^3.0.2
   flutter_localizations:
     sdk: flutter
 
@@ -82,6 +83,7 @@ flutter:
     - assets/svgs/
     - assets/pngs/
     - assets/languages/
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
